--- a/angular.json
+++ b/angular.json
@@ -38,8 +38,11 @@
             ],
             "styles": [
               "src/styles.css"
+            
             ],
-            "scripts": []
+            "scripts": [
+             
+            ]
           },
           "configurations": {
             "production": {
